syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.anubhav.grpc";
option java_outer_classname = "MatrixServiceProto";

service MatrixService {
  rpc MultiplyMatrices (MatrixPair) returns (MatrixResponse);
  rpc MultiplyMatricesStream (stream MatrixPair) returns (stream MatrixResponse);
}

message MatrixPair {
  Matrix matrixA = 1;
  Matrix matrixB = 2;
}

message Matrix {
  repeated Row rows = 1;
}

message Row {
  repeated int32 elements = 1;
}

message MatrixResponse {
  repeated Row rows = 1;
}
